--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Резюме</title>
   </head>
   <body>
@@ -118,7 +118,7 @@
       </div>
       <!--Sidebar-->
       <aside class="Sidebar">
-        <img src="img/photo1.jpg" alt="user photo" class="photo" />
+        <img src="/photo1.jpg" alt="user photo" class="photo" />
         <!--Contacts-->
         <div class="contacts">
           <h3 class="sidebar-title">Особисті дані</h3>
