--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
               <a href=" 21 рік." class="contact-link"> 22 роки.</a>
             </p>
               <span class="contact-type">Телефон:</span>
-              <a href="тел +380960223618" class="contact-link">+380960223618</a>
+              <a href="tel:+380960223618" class="contact-link">+380960223618</a>
             </p>
             <p>
               <span class="contact-type">Ел. пошта:</span>
-              <a href="evtodijtetana@gmail.com" class="contact-link"
+              <a href="mailto:tetana@gmail.com" class="contact-link"
                 >evtodijtetana@gmail.com</a>
             </p>
           </p>
