--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
             <p>
               <span class="contact-type">Ел. пошта:</span>
-              <a href="mailto:tetana@gmail.com" class="contact-link"
+              <a href="mailto:evtodijtetana@gmail.com" class="contact-link"
                 >evtodijtetana@gmail.com</a>
             </p>
           </p>
