--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
           <h3 class="sidebar-title">Особисті дані</h3>
           <div>
             <p>
-              <span class="contact-type">Вік :</span>
-              <a href=" 21 рік." class="contact-link"> 22 роки.</a>
+              <span class="contact-type">Вік : 22 роки</span>
             </p>
               <span class="contact-type">Телефон:</span>
               <a href="tel:+380960223618" class="contact-link">+380960223618</a>
