--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                 >evtodijtetana@gmail.com</a>
             </p>
           </p>
-          <span class="contact-type">Бажаний рівень ЗП:</span>
-          <a href="від 10000 тис.грн" class="contact-link">від 10000 тис.грн"</a>
+          <span class="contact-type">Бажаний рівень ЗП: від 10000 тис.грн</span>
         </p>
           </div>
         </div>
